# Jodell_rg40_50

./: README.md
gripper_control/: package.xml  setup.py
gripper_control/config/: controllers.yaml
gripper_control/launch/: gazebo_gripper.launch.py  gripper.launch.py
gripper_control/meshes/: Component19.stl  Component2.stl  Component3.stl  Gripper-Jaws-v1.stl
gripper_control/rviz/: gripper.rviz
gripper_control/urdf/: Gripper.urdf
ros2_jodell_epg40_050_gripper_rs485_gui/: package.xml  setup.cfg  setup.py
ros2_jodell_epg40_050_gripper_rs485_gui/launch/: ros2_jodell_epg40_050_gripper_rs485_gui_launch.py
ros2_jodell_epg40_050_gripper_rs485_gui/ros2_jodell_epg40_050_gripper_rs485_gui/: ros2_jodell_epg40_050_gripper_rs485_gui.py
ros2_jodell_epg40_050_gripper_rs485_interface/: package.xml  setup.cfg  setup.py
ros2_jodell_epg40_050_gripper_rs485_interface/config/: jodell_epg40_050_params.yaml
ros2_jodell_epg40_050_gripper_rs485_interface/launch/: ros2_jodell_epg40_050_gripper_rs485_interface_launch.py
ros2_jodell_epg40_050_gripper_rs485_interface/ros2_jodell_epg40_050_gripper_rs485_interface/: ros2_jodell_epg40_050_gripper_rs485_interface.py
ros2_jodell_epg40_050_gripper_rs485_msgs/: CMakeLists.txt  package.xml
ros2_jodell_epg40_050_gripper_rs485_msgs/msg/: GripperCommand.msg
ros2_jodell_epg40_050_gripper_rs485_msgs/srv/: ChangeBaudRate.srv  GetAllPresets.srv  SetPreset.srv  SetSlaveID.srv  Trigger.srv
