<?xml version="1.0"?>
<package format="3">
  <name>ros2_jodell_epg40_050_gripper_rs485_gui</name>
  <version>0.0.0</version>
  <description>ros2_jodell_epg40_050_gripper_rs485_gui package</description>
  <maintainer email="nrih.robotics@gmail.com">Usama</maintainer>
  <license>Apache 2.0</license>
  <author email="nrih.robotics@gmail.com">Usama</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
